    - Increased advanced laser cooldown by 200%
    - Increased nuclear train consumption by 1000%
    - Increased advanced tank health by 1000 HP
    - Increased nuclear tank health by 2500 HP
    - Decreased nuclear tank consumption by 50%
    - Decreased advanced car consumption by 33%
    - Decreased nuclear car consumption by 33%
    - Increased nuclear train top speed by 10%

---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 16. 01. 2022
  Bugfixes:
    - Fixed infinite technologies requiring 1 science pack for first level of infinite tech

---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 28. 12. 2021
  Bugfixes:
    - Corrected chinese locale duplicate key artillery remote

---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 05. 09. 2021
  Contributions:
    - PlexPt has provided a Chinese locale
  Tweaks:
    - Increased HE artillery shell damage by ~15%
    - Changed behavior for incendiary and bio artillery shells to allow for damage scaling effect from research.
  Bugfixes:
    - Incendiary and Bio artillery shells not scaling with damage research
    - Fixed naplam not showing fire stats in tooltip window

---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 05. 09. 2021
  Contributions:
    - moolex fixed unchecking use equipment breaking on lite artillery technology
  Tweaks:
    - Nuclear landmines no longer hurt the same force that laid them (Thanks Necrobotic)
    - Increased advCar consumption by 3x, lowered top speed, and set emissions to 15 minute
    - Increased advTank consumption by 2x, lowered top speed, and set emissions to 20 minute
    - Increased nuclearTank consumption by 5x, lowered top speed, and set emissions to 30 minute