@@ -1,7 +1,7 @@
 {
     "name" : "RampantArsenal",
     "factorio_version" : "1.1",
-    "version" : "1.1.4",
+    "version" : "1.1.5",
     "title" : "Rampant Arsenal",
     "author" : "Veden",
     "homepage" : "https://forums.factorio.com/viewtopic.php?f=190&t=60626",
