@@ -1,6 +1,7 @@
 [entity-name]
 massive-fire-rampant-arsenal=Fire
 # big-toxic-fire-cloud-rampant-arsenal=Toxic Cloud
+big-toxic-launcher-cloud-rampant-arsenal=Toxic Cloud
 defender-launched-rampant-arsenal=Defender
 destroyer-launched-rampant-arsenal=Destroyer
 cannon-ammo-turret-rampant-arsenal=Cannon Turret
