@@ -11,6 +11,8 @@ Date: 18. 02. 2022
     - Decreased advanced car consumption by 33%
     - Decreased nuclear car consumption by 33%
     - Increased nuclear train top speed by 10%
+  Bugfixes:
+    - Fixed toxic launcher ammo not doing damage
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
